Giraph Change Log

Release 0.2.0 - unreleased

  GIRAPH-281: Add options to control Netty's per-channel receive and
  send buffer sizes (ekoontz via aching).

  GIRAPH-228: SimpleTriangleClosingVertex should not use ArrayWritable
  for a vertex value. (Eli Reisman via jghoman)

  GIRAPH-209: Include munge version in artifact name. 
  (Eli Reisman via jghoman)
  
  GIRAPH-280: Add IntelliJ-generated *.iml and *.ipr files to Apache
  Rat's <exclude> list. (ekoontz via aching).

  GIRAPH-45: Improve the way to keep outgoing messages (majakabiljo
  via aching).
 
  GIRAPH-271: Regression in imports in CommunicationsInterface (netj
  via aching).

  GIRAPH-267: Jobs can get killed for not reporting status during
  INPUT SUPERSTEP (netj via aching).

  GIRAPH-266: Average aggregators don't calculate real average
  (majakabiljo via aching).

  GIRAPH-244: Vertex API redesign (apresta via aching).

  GIRAPH-236: Add FindBugs to maven build (Jan van der Lugt via
  aching).

  GIRAPH-224: Netty server-side combiner (apresta via aching).

  GIRAPH-251: Allow to access the distributed cache from Vertexes and
  WorkerContext (Gianmarco De Francisci Morales via aching).

  GIRAPH-261: Rename isQuiet variable. (Gianmarco De Francisci Morales 
  via jghoman).

  GIRAPH-248: Generic IdentityVertex for IO testing (Sean Choi via
  aching).

  GIRAPH-222: GIRAPH-222 giraph-formats-contrib needs a README (bfem
  via aching).

  GIRAPH-257: TestBspBasic.testBspMasterCompute is broken (majakabiljo
  via aching).

  GIRAPH-81: Create annotations on provided algorithms for cli
  (majakabiljo via aching).

  GIRAPH-242: HashMapVertex stores neighbor ids twice.
  (Alessandro Presta via hyunsik)

  GIRAPH-241: Small typos in var names in NettyWorkerClient.java 
  (Eli Reisman via hyunsik)

  GIRAPH-239: IntIntNullIntVertex doesn't save halted state (apresta
  via aching)

  GIRAPH-238: BasicVertex should have default Writable implementation
  (apresta via aching)
